[package]
name = "bevy-shadows"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ChangeCaps/bevy-shadows"
exclude = ["assets"]

[dependencies]
bytemuck = "1.5.1"
# NOTE: The following branch just uses the same bevy version as specified below
# and will need to be updated in lock step
bevy = "0.5"
bevy_mod_bounding = { git = "https://github.com/slyedoc/bevy_mod_bounding" }

[patch.crates-io]
# Github versions
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }