[package]
name = "bevy-shadows"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ChangeCaps/bevy-shadows"
exclude = ["assets"]

[dependencies]
bytemuck = "1.5.1"
bevy = "0.5"
bevy_mod_bounding = "0.1"

[patch.crates-io]
# Github versions
bevy_mod_bounding = { git = "https://github.com/slyedoc/bevy_mod_bounding" }
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }